Update README.md to clarify Loom JDK requirements and streamline build instructions